--- a/src/style.scss
+++ b/src/style.scss
@@ -30,6 +30,12 @@
 .hex-display {
   position: relative;
   height: 900px;
+
+  &[data-mini="true"] {
+    position: relative;
+    height: 450px;
+    width: 50%;
+  }
 }
 
 .hex {
@@ -47,6 +53,17 @@
     border: none;
     outline: none;
     cursor: pointer;
+  }
+
+  .hex-display[data-mini="true"] & {
+    width: 50px;
+    height: 50px;
+
+    &-button {
+      width: 27.5px;
+      height: 27.5px;
+      cursor: none;
+    }
   }
 
   &-item {
@@ -122,4 +139,10 @@
 
 .input-num {
   width: 50px;
+}
+
+.answer-wrapper {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
